apps/productivity/mealie/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mealie
  namespace: mealie
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mealie.crussell.io`)
      kind: Rule
      services:
        - name: mealie
          port: 9000
  tls:
    certResolver: letsencrypt
